--- a/css/style.css
+++ b/css/style.css
@@ -1352,4 +1352,15 @@ h6 {
   }
 }
 
+#content {
+  padding: 0.5rem;
+  display: flex;
+}
+
+#left,
+#right {
+  padding: 0.5rem;
+  flex-grow: 1;
+}
+
 
